--- a/client/src/index.html
+++ b/client/src/index.html
@@ -33,6 +33,7 @@
 
   <link rel="stylesheet" href="assets/css/theme-dark.css">
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- <link rel="icon" type="image/png" href="assets/images/favicon.png"> -->
 
 </head>
