--- a/server/www/index.html
+++ b/server/www/index.html
@@ -36,6 +36,7 @@
 <link rel="stylesheet" href="styles.55281e5cad626518.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.55281e5cad626518.css"></noscript></head>
 
 <body>
+  
   <div class="preloader">
     <div class="spinner">
       <div class="dot1"></div>
@@ -44,6 +45,7 @@
   </div>
 
   <app-root></app-root>
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
   <script src="assets/js/jquery.min.js"></script>
 
@@ -70,6 +72,6 @@
   <script src="assets/js/contact-form-script.js"></script>
 
   <script src="assets/js/custom.js"></script>
-<script src="runtime.72a5cebb25eb24dc.js" type="module"></script><script src="polyfills.d996e9e9e70bb83d.js" type="module"></script><script src="main.49fc4c51fc58f9cc.js" type="module"></script>
+<script src="runtime.2f71a8bbbe71bc84.js" type="module"></script><script src="polyfills.d996e9e9e70bb83d.js" type="module"></script><script src="main.b3ccf6132a532d54.js" type="module"></script>
 
 </body></html>
