--- a/server/www/index.html
+++ b/server/www/index.html
@@ -33,7 +33,18 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" type="image/png" href="assets/images/logo/balancedyte-logo.png">
 
-<link rel="stylesheet" href="styles.6c9eb4794042b6c2.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.6c9eb4794042b6c2.css"></noscript></head>
+
+  <!-- Google tag (gtag.js) -->
+    <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-256451884-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-256451884-1');
+    </script>
+
+<link rel="stylesheet" href="styles.b9ae428cbbcdbeab.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.b9ae428cbbcdbeab.css"></noscript></head>
 
 <body>
   
@@ -72,6 +83,6 @@
   <script src="assets/js/contact-form-script.js"></script>
 
   <script src="assets/js/custom.js"></script>
-<script src="runtime.520ef29c2dd0bb1e.js" type="module"></script><script src="polyfills.d996e9e9e70bb83d.js" type="module"></script><script src="main.d3433a9f2b30c9e3.js" type="module"></script>
+<script src="runtime.3ec79cb0ed74e3de.js" type="module"></script><script src="polyfills.d996e9e9e70bb83d.js" type="module"></script><script src="main.53d2010cc2aa063f.js" type="module"></script>
 
 </body></html>
