--- a/server/www/index.html
+++ b/server/www/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
-  <title>Balance Dyte</title>
+  <title>We help you manage your weight with help of diet plan - Balance Dyte</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
@@ -13,14 +13,14 @@
 
   <style>@-webkit-keyframes spin{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}@-webkit-keyframes burst{0%{-webkit-transform:scale(1);transform:scale(1);opacity:1}90%{-webkit-transform:scale(1.5);transform:scale(1.5);opacity:0}}@-webkit-keyframes flashing{0%{opacity:1}45%{opacity:0}90%{opacity:1}}@-webkit-keyframes fade-left{0%{-webkit-transform:translateX(0);transform:translateX(0);opacity:1}75%{-webkit-transform:translateX(-20px);transform:translateX(-20px);opacity:0}}@-webkit-keyframes fade-right{0%{-webkit-transform:translateX(0);transform:translateX(0);opacity:1}75%{-webkit-transform:translateX(20px);transform:translateX(20px);opacity:0}}@-webkit-keyframes fade-up{0%{-webkit-transform:translateY(0);transform:translateY(0);opacity:1}75%{-webkit-transform:translateY(-20px);transform:translateY(-20px);opacity:0}}@-webkit-keyframes fade-down{0%{-webkit-transform:translateY(0);transform:translateY(0);opacity:1}75%{-webkit-transform:translateY(20px);transform:translateY(20px);opacity:0}}@-webkit-keyframes tada{from{-webkit-transform:scale3d(1,1,1);transform:scale3d(1,1,1)}10%,20%{-webkit-transform:scale3d(.95,.95,.95) rotate3d(0,0,1,-10deg);transform:scale3d(.95,.95,.95) rotate3d(0,0,1,-10deg)}30%,50%,70%,90%{-webkit-transform:scale3d(1,1,1) rotate3d(0,0,1,10deg);transform:scale3d(1,1,1) rotate3d(0,0,1,10deg)}40%,60%,80%{-webkit-transform:scale3d(1,1,1) rotate3d(0,0,1,-10deg);transform:scale3d(1,1,1) rotate3d(0,0,1,-10deg)}to{-webkit-transform:scale3d(1,1,1);transform:scale3d(1,1,1)}}</style><link rel="stylesheet" href="assets/css/boxicons.min.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="assets/css/boxicons.min.css"></noscript>
 
-  <link rel="stylesheet" href="assets/css/owl.carousel.min.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="assets/css/owl.carousel.min.css"></noscript>
-  <link rel="stylesheet" href="assets/css/owl.theme.default.min.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="assets/css/owl.theme.default.min.css"></noscript>
+  <!-- <link rel="stylesheet" href="assets/css/owl.carousel.min.css"> -->
+  <!-- <link rel="stylesheet" href="assets/css/owl.theme.default.min.css"> -->
 
-  <link rel="stylesheet" href="assets/css/jquery-ui.min.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="assets/css/jquery-ui.min.css"></noscript>
+  <!-- <link rel="stylesheet" href="assets/css/jquery-ui.min.css"> -->
 
-  <link rel="stylesheet" href="assets/css/magnific-popup.min.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="assets/css/magnific-popup.min.css"></noscript>
+  <!-- <link rel="stylesheet" href="assets/css/magnific-popup.min.css"> -->
 
-  <link rel="stylesheet" href="assets/css/odometer.min.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="assets/css/odometer.min.css"></noscript>
+  <!-- <link rel="stylesheet" href="assets/css/odometer.min.css"> -->
 
   <link rel="stylesheet" href="assets/css/meanmenu.min.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="assets/css/meanmenu.min.css"></noscript>
 
@@ -47,7 +47,7 @@
 <link rel="stylesheet" href="styles.b9ae428cbbcdbeab.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.b9ae428cbbcdbeab.css"></noscript></head>
 
 <body>
-  
+
   <!-- <div class="preloader">
     <div class="spinner">
       <div class="dot1"></div>
@@ -56,33 +56,13 @@
   </div> -->
 
   <app-root></app-root>
+
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
   <script src="assets/js/jquery.min.js"></script>
 
-  <script src="assets/js/bootstrap.bundle.min.js"></script>
-
-  <script src="assets/js/magnific-popup.min.js"></script>
-
-  <script src="assets/js/odometer.min.js"></script>
-
-  <script src="assets/js/appear.min.js"></script>
-
-  <script src="assets/js/meanmenu.min.js"></script>
-
-  <script src="assets/js/owl.carousel.min.js"></script>
-
-  <script src="assets/js/wow.min.js"></script>
-
-  <script src="assets/js/jquery-ui.min.js"></script>
-
-  <script src="assets/js/ajaxchimp.min.js"></script>
-
-  <script src="assets/js/form-validator.min.js"></script>
-
-  <script src="assets/js/contact-form-script.js"></script>
-
   <script src="assets/js/custom.js"></script>
-<script src="runtime.2d01797654b6050b.js" type="module"></script><script src="polyfills.d996e9e9e70bb83d.js" type="module"></script><script src="main.86012d0830600067.js" type="module"></script>
+<script src="runtime.7d709833d415264d.js" type="module"></script><script src="polyfills.d996e9e9e70bb83d.js" type="module"></script><script src="main.7a14c736aa0f801f.js" type="module"></script>
+
 
 </body></html>
