--- a/client/src/index.html
+++ b/client/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Balance Dyte</title>
+  <title>We help you manage your weight with help of diet plan - Balance Dyte</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
@@ -16,14 +16,14 @@
 
   <link rel="stylesheet" href="assets/css/boxicons.min.css">
 
-  <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-  <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
+  <!-- <link rel="stylesheet" href="assets/css/owl.carousel.min.css"> -->
+  <!-- <link rel="stylesheet" href="assets/css/owl.theme.default.min.css"> -->
 
-  <link rel="stylesheet" href="assets/css/jquery-ui.min.css">
+  <!-- <link rel="stylesheet" href="assets/css/jquery-ui.min.css"> -->
 
-  <link rel="stylesheet" href="assets/css/magnific-popup.min.css">
+  <!-- <link rel="stylesheet" href="assets/css/magnific-popup.min.css"> -->
 
-  <link rel="stylesheet" href="assets/css/odometer.min.css">
+  <!-- <link rel="stylesheet" href="assets/css/odometer.min.css"> -->
 
   <link rel="stylesheet" href="assets/css/meanmenu.min.css">
 
@@ -50,7 +50,7 @@
 </head>
 
 <body>
-  
+
   <!-- <div class="preloader">
     <div class="spinner">
       <div class="dot1"></div>
@@ -59,31 +59,10 @@
   </div> -->
 
   <app-root></app-root>
+
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
   <script src="assets/js/jquery.min.js"></script>
-
-  <script src="assets/js/bootstrap.bundle.min.js"></script>
-
-  <script src="assets/js/magnific-popup.min.js"></script>
-
-  <script src="assets/js/odometer.min.js"></script>
-
-  <script src="assets/js/appear.min.js"></script>
-
-  <script src="assets/js/meanmenu.min.js"></script>
-
-  <script src="assets/js/owl.carousel.min.js"></script>
-
-  <script src="assets/js/wow.min.js"></script>
-
-  <script src="assets/js/jquery-ui.min.js"></script>
-
-  <script src="assets/js/ajaxchimp.min.js"></script>
-
-  <script src="assets/js/form-validator.min.js"></script>
-
-  <script src="assets/js/contact-form-script.js"></script>
 
   <script src="assets/js/custom.js"></script>
 </body>
