fixed UI bug in blogs

--- a/server/www/index.html
+++ b/server/www/index.html
@@ -56,7 +56,9 @@
         <div id="paypal-button-container"></div>
       </div>
     </div>
-    <script src="https://www.paypal.com/sdk/js?client-id=sb&amp;enable-funding=venmo&amp;currency=USD" data-sdk-integration-source="button-factory"></script>
+    <!-- <script
+      src="https://www.paypal.com/sdk/js?client-id=sb&enable-funding=venmo&currency=USD"
+      data-sdk-integration-source="button-factory"></script> -->
     <!-- <script>
   function initPayPalButton() {
     paypal.Buttons({
@@ -96,6 +98,6 @@
   }
   initPayPalButton();
 </script> -->
-  <script src="runtime.8d6488c916d38cea.js" type="module"></script><script src="polyfills.d996e9e9e70bb83d.js" type="module"></script><script src="main.c283c4383d14e1c7.js" type="module"></script>
+  <script src="runtime.aeab0c6272b2775a.js" type="module"></script><script src="polyfills.d996e9e9e70bb83d.js" type="module"></script><script src="main.c283c4383d14e1c7.js" type="module"></script>
 
 </body></html>
