--- a/client/src/index.html
+++ b/client/src/index.html
@@ -62,9 +62,9 @@
         <div id="paypal-button-container"></div>
       </div>
     </div>
-    <script
+    <!-- <script
       src="https://www.paypal.com/sdk/js?client-id=sb&enable-funding=venmo&currency=USD"
-      data-sdk-integration-source="button-factory"></script>
+      data-sdk-integration-source="button-factory"></script> -->
     <!-- <script>
   function initPayPalButton() {
     paypal.Buttons({
